--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "preinstall": "rm package-lock.json",
     "dependencies": {
         "discord.js": "^11.4.2",
+        "dotenv": "^8.1.0",
         "es6": "0.0.7"
     }
 }
