--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "discord.js": "^11.4.2",
         "dotenv": "^8.1.0",
-        "es6": "0.0.7"
+        "es6": "0.0.7",
+        "winston": "^3.2.1"
     }
 }
